--- a/db-config.json
+++ b/db-config.json
@@ -1,6 +1,6 @@
 {
   "dev":  {
-    "username": "rxvx3uz3raaj4zv1",
+    "user": "rxvx3uz3raaj4zv1",
     "password": "p8d68sgqwrsprxoa",
     "database": "hm5h61sb1xsn2w70",
     "host": "qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
@@ -15,7 +15,7 @@
     }
   },
   "stfqa": {
-    "username": "rxvx3uz3raaj4zv1",
+    "user": "rxvx3uz3raaj4zv1",
     "password": "p8d68sgqwrsprxoa",
     "database": "hm5h61sb1xsn2w70",
     "host": "qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
@@ -30,14 +30,14 @@
     }
   },
   "test": {
-    "username": "root",
+    "user": "root",
     "password": null,
     "database": "gernini",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
+    "user": "root",
     "password": null,
     "database": "gernini_prod",
     "host": "127.0.0.1",
