--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "highlight.js": "^9.3.0",
     "jquery": "^3.5.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "update-electron-app": "^1.1.1"
   },
   "standard": {
