--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "electron-api-demos",
-  "productName": "Electron API Demos",
+  "name": "dotme-stefanini",
+  "productName": "DotMe Stefanini",
   "version": "2.0.2",
   "description": "Electron interactive API demos",
   "main": "main.js",
@@ -12,18 +12,18 @@
     "generate-test-report": "mocha --reporter=json > report.json",
     "package": "npm-run-all package:*",
     "package:mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --out=out --icon=assets/app-icon/mac/app.icns --osx-sign.identity='Developer ID Application: GitHub' --extend-info=assets/mac/info.plist",
-    "package:win": "electron-packager . --overwrite --platform=win32 --arch=ia32 --out=out --icon=assets/app-icon/win/app.ico",
+    "package:win": "electron-packager . --overwrite --platform=win32 --arch=ia32 --out=out --icon=assets/img/logo.ico",
     "package:linux": "electron-packager . --overwrite --platform=linux --arch=x64 --out=out",
-    "package:sign-exe": "signcode './out/Electron API Demos-win32-ia32/Electron API Demos.exe' --cert ~/electron-api-demos.p12 --prompt --name 'Electron API Demos' --url 'http://electron.atom.io'",
+    "package:sign-exe": "signcode './out/DotMe Stefanini-win32-ia32/DotMe Stefanini.exe' --cert ~/dotme-stefanini.p12 --prompt --name 'DotMe Stefanini' --url 'http://electron.atom.io'",
     "package:installer": "node ./script/installer.js",
-    "package:sign-installer": "signcode './out/windows-installer/ElectronAPIDemosSetup.exe' --cert ~/electron-api-demos.p12 --prompt --name 'Electron API Demos' --url 'http://electron.atom.io'",
+    "package:sign-installer": "signcode './out/windows-installer/ElectronAPIDemosSetup.exe' --cert ~/dotme-stefanini.p12 --prompt --name 'DotMe Stefanini' --url 'http://electron.atom.io'",
     "xpackage:mas": "./script/mas.sh",
     "windows-store": "node ./script/windows-store.js",
     "release": "node ./script/release.js",
     "prepack": "check-for-leaks",
     "prepush": "check-for-leaks"
   },
-  "repository": "https://github.com/electron/electron-api-demos",
+  "repository": "https://github.com/electron/dotme-stefanini",
   "keywords": [
     "Electron",
     "API",
